@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="src/helper.js"></script>
 	<script type="text/javascript" src="src/lang.js"></script>
 	<script type="text/javascript" src="src/wave.js"></script>
+	<script type="text/javascript" src="src/time_control.js"></script>
 
 	<!-- CORE -->
 	<script type="text/javascript" src="src/main.js"></script>
