@@ -116,6 +116,4 @@
 		players[i].$scoreHistory = '';
 		players[i].$subscoreHistory = '';
 	}
-
-	context.$gameTime = 0;
 }
